--- a/house_price/cross_val_score.ipynb
+++ b/house_price/cross_val_score.ipynb
@@ -3,68 +3,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f8f9605",
+   "id": "94797995",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "train=pd.read_csv('./preprocessed/train_LabelEncoder.csv')\n",
-    "test=pd.read_csv('./preprocessed/test_LabelEncoder.csv')"
+    "train=pd.read_csv('./data/preprocess/train_0926.csv')\n",
+    "test=pd.read_csv('./data/preprocess/test_0926.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "045015c4",
+   "id": "636de1fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_1=train.drop(['Survived'], axis=1)\n",
-    "Y_train=train['Survived']"
+    "from sklearn.linear_model import ElasticNet\n",
+    "import numpy as np\n",
+    "\n",
+    "EN = ElasticNet(normalize = True, \n",
+    "                alpha = 0.0001,\n",
+    "                l1_ratio = 0.7)\n",
+    "\n",
+    "X=train.drop(columns=['SalePrice'])\n",
+    "y=train['SalePrice']\n",
+    "\n",
+    "EN.fit(X, y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0992a64d",
-   "metadata": {},
+   "id": "99ea6014",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "RF=RandomForestClassifier()\n",
-    "RF.fit(X_train_1,Y_train)"
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "np.sqrt(-cross_val_score(EN,train,y,scoring='neg_mean_squared_log_error', cv=5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c2711cc",
+   "id": "d0fa0150",
    "metadata": {},
    "outputs": [],
    "source": [
-    "RF.score(X_train_1, Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47bfbb37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pred=RF.predict(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f560948",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sub=pd.read_csv('./submission.csv')\n",
-    "sub['Survived']=pred\n",
-    "sub.to_csv('RFclassifier_2.csv',index=False)"
+    "import sklearn\n",
+    "sklearn.metrics.SCORERS.keys()"
    ]
   }
  ],
