--- a/house_price/seosztt/Modeling_with_modified_scaling.ipynb
+++ b/house_price/seosztt/Modeling_with_modified_scaling.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "train=pd.read_csv('./data/preprocess/train_0926.csv')\n",
-    "test=pd.read_csv('./data/preprocess/test_0926.csv')"
+    "train=pd.read_csv('./data/preprocess/train_0918.csv')\n",
+    "test=pd.read_csv('./data/preprocess/test_0918.csv')"
    ]
   },
   {
@@ -72,21 +72,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c98bd6fe",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ridge(alpha=0.3, normalize=True, solver='cholesky')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import Ridge\n",
     "\n",
@@ -102,23 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "eee17a59",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1261448281058073"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_hat=RG.predict(test_set.drop(columns=['SalePrice']))\n",
     "rmsle(np.expm1(test_set['SalePrice']),np.expm1(y_hat))"
@@ -178,21 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "79f8aadb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Lasso(alpha=0.2, normalize=True)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import Lasso\n",
     "\n",
@@ -207,21 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "38506002",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.38277372901293605"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_hat=LS.predict(test_set.drop(columns=['SalePrice']))\n",
     "rmsle(np.expm1(test_set['SalePrice']),np.expm1(y_hat))"
@@ -252,7 +208,7 @@
     {
      "data": {
       "text/plain": [
-       "ElasticNet(alpha=0.0001, l1_ratio=0.7, normalize=True)"
+       "ElasticNet(alpha=1e-07, l1_ratio=0.7, normalize=True)"
       ]
      },
      "execution_count": 4,
@@ -264,7 +220,7 @@
     "from sklearn.linear_model import ElasticNet\n",
     "\n",
     "EN = ElasticNet(normalize = True, \n",
-    "                alpha = 0.0001,\n",
+    "                alpha = 0.0000001,\n",
     "                l1_ratio = 0.7)\n",
     "\n",
     "X=train_set.drop(columns=['SalePrice'])\n",
@@ -282,7 +238,7 @@
     {
      "data": {
       "text/plain": [
-       "0.12484478031715027"
+       "0.1263524772848757"
       ]
      },
      "execution_count": 5,
@@ -297,22 +253,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a6ffa0c2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1.15188997e-04, -7.11372565e-05, -9.62639303e-05, -7.81851673e-05,\n",
-       "       -1.56993479e-04])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
@@ -321,21 +265,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1c84967b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['explained_variance', 'r2', 'max_error', 'neg_median_absolute_error', 'neg_mean_absolute_error', 'neg_mean_absolute_percentage_error', 'neg_mean_squared_error', 'neg_mean_squared_log_error', 'neg_root_mean_squared_error', 'neg_mean_poisson_deviance', 'neg_mean_gamma_deviance', 'accuracy', 'top_k_accuracy', 'roc_auc', 'roc_auc_ovr', 'roc_auc_ovo', 'roc_auc_ovr_weighted', 'roc_auc_ovo_weighted', 'balanced_accuracy', 'average_precision', 'neg_log_loss', 'neg_brier_score', 'adjusted_rand_score', 'rand_score', 'homogeneity_score', 'completeness_score', 'v_measure_score', 'mutual_info_score', 'adjusted_mutual_info_score', 'normalized_mutual_info_score', 'fowlkes_mallows_score', 'precision', 'precision_macro', 'precision_micro', 'precision_samples', 'precision_weighted', 'recall', 'recall_macro', 'recall_micro', 'recall_samples', 'recall_weighted', 'f1', 'f1_macro', 'f1_micro', 'f1_samples', 'f1_weighted', 'jaccard', 'jaccard_macro', 'jaccard_micro', 'jaccard_samples', 'jaccard_weighted'])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sklearn\n",
     "sklearn.metrics.SCORERS.keys()"
@@ -351,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7adac48a",
    "metadata": {},
    "outputs": [],
@@ -366,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d93ae20c",
    "metadata": {},
    "outputs": [],
@@ -387,21 +320,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "6d89d871",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AdaBoostRegressor(random_state=0)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import AdaBoostRegressor\n",
     "\n",
@@ -415,23 +337,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "2f6398bc",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.16522581623969151"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_hat=ABR.predict(test_set.drop(columns=['SalePrice']))\n",
     "rmsle(np.expm1(test_set['SalePrice']),np.expm1(y_hat))"
@@ -455,21 +366,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "4321a2fc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GradientBoostingRegressor(random_state=0)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "\n",
@@ -482,21 +382,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "13bb95aa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.12740232742201202"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_hat=GBR.predict(test_set.drop(columns=['SalePrice']))\n",
     "rmsle(np.expm1(test_set['SalePrice']),np.expm1(y_hat))"
@@ -556,21 +445,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "ae4e5905",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LGBMRegressor(random_state=0)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from lightgbm import LGBMRegressor\n",
     "\n",
@@ -584,21 +462,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "a357f575",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.13519916615901967"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_hat=LGB.predict(test_set.drop(columns=['SalePrice']))\n",
     "rmsle(np.expm1(test_set['SalePrice']),np.expm1(y_hat))"
